--- a/Flagrum.Web/Features/Information/About.resx
+++ b/Flagrum.Web/Features/Information/About.resx
@@ -105,4 +105,13 @@
     <data name="Sai" xml:space="preserve">
         <value>Sai</value>
     </data>
+    <data name="BMC" xml:space="preserve">
+        <value>Buy Me a Coffee</value>
+    </data>
+    <data name="Ko-Fi" xml:space="preserve">
+        <value>Support me on Ko-Fi</value>
+    </data>
+    <data name="PayPal" xml:space="preserve">
+        <value>Donate via PayPal</value>
+    </data>
 </root>
