--- a/Flagrum.Web/Features/Information/About.ja-JP.resx
+++ b/Flagrum.Web/Features/Information/About.ja-JP.resx
@@ -105,4 +105,13 @@
     <data name="Sai" xml:space="preserve">
         <value>サイ</value>
     </data>
+    <data name="BMC" xml:space="preserve">
+        <value>私にコーヒーを買って</value>
+    </data>
+    <data name="Ko-Fi" xml:space="preserve">
+        <value>Ko-Fiで寄付をする</value>
+    </data>
+    <data name="PayPal" xml:space="preserve">
+        <value>PayPalで寄付する</value>
+    </data>
 </root>
