--- a/Flagrum.Web/Features/AssetExplorer/Previews/ModelPreviewSettingsModal.resx
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/ModelPreviewSettingsModal.resx
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <root>
-    <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata"
-                id="root"
+    <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root"
                 xmlns="">
         <xsd:element name="root" msdata:IsDataSet="true">
 
@@ -24,22 +23,13 @@
             PublicKeyToken=b77a5c561934e089
         </value>
     </resheader>
-    <data name="Save" xml:space="preserve">
-        <value>セーブ</value>
+    <data name="Title" xml:space="preserve">
+        <value>3D Viewer Settings</value>
     </data>
-    <data name="Cancel" xml:space="preserve">
-        <value>キャンセル</value>
+    <data name="Rotate" xml:space="preserve">
+        <value>Rotate</value>
     </data>
-    <data name="Browse" xml:space="preserve">
-        <value>ブラウズ</value>
-    </data>
-    <data name="Yes" xml:space="preserve">
-        <value>はい</value>
-    </data>
-    <data name="No" xml:space="preserve">
-        <value>いいえ</value>
-    </data>
-    <data name="Settings" xml:space="preserve">
-        <value>設定</value>
+    <data name="Pan" xml:space="preserve">
+        <value>Pan</value>
     </data>
 </root>
