--- a/Flagrum.Web/Features/EarcMods/Editor.resx
+++ b/Flagrum.Web/Features/EarcMods/Editor.resx
@@ -89,4 +89,7 @@
     <data name="AddReference" xml:space="preserve">
         <value>Reference</value>
     </data>
+    <data name="ClearCache" xml:space="preserve">
+        <value>Clear Cache</value>
+    </data>
 </root>
