--- a/Flagrum.Web/Features/EarcMods/Editor.zh-hant.resx
+++ b/Flagrum.Web/Features/EarcMods/Editor.zh-hant.resx
@@ -72,4 +72,10 @@
     <data name="With" xml:space="preserve">
         <value>为</value>
     </data>
+    <data name="BuildList" xml:space="preserve">
+        <value>構建列表</value>
+    </data>
+    <data name="ClearCache" xml:space="preserve">
+        <value>清除緩存</value>
+    </data>
 </root>
