--- a/Flagrum.Web/Features/EarcMods/Index.zh-hant.resx
+++ b/Flagrum.Web/Features/EarcMods/Index.zh-hant.resx
@@ -96,4 +96,43 @@
     <data name="Warning" xml:space="preserve">
         <value>警告</value>
     </data>
+    <data name="CategoryAll" xml:space="preserve">
+        <value>全部MOD</value>
+    </data>
+    <data name="CategoryCheat" xml:space="preserve">
+        <value>作弊</value>
+    </data>
+    <data name="CategoryContent" xml:space="preserve">
+        <value>內容</value>
+    </data>
+    <data name="CategoryFix" xml:space="preserve">
+        <value>修復</value>
+    </data>
+    <data name="CategoryGameplay" xml:space="preserve">
+        <value>變更模式</value>
+    </data>
+    <data name="CategoryLighthearted" xml:space="preserve">
+        <value>愉快</value>
+    </data>
+    <data name="CategoryOther" xml:space="preserve">
+        <value>其他</value>
+    </data>
+    <data name="CategoryQualityOfLife" xml:space="preserve">
+        <value>體驗改善</value>
+    </data>
+    <data name="CategoryReplacement" xml:space="preserve">
+        <value>替換</value>
+    </data>
+    <data name="CategoryRework" xml:space="preserve">
+        <value>重塑</value>
+    </data>
+    <data name="Filter" xml:space="preserve">
+        <value>濾鏡：</value>
+    </data>
+    <data name="InstallFromZip" xml:space="preserve">
+        <value>安裝MOD</value>
+    </data>
+    <data name="ModReadme" xml:space="preserve">
+        <value>MOD自述文件</value>
+    </data>
 </root>
