--- a/Flagrum.Web/Layout/PatchNotes.zh-hans.resx
+++ b/Flagrum.Web/Layout/PatchNotes.zh-hans.resx
@@ -25,6 +25,6 @@
         <value>查看完整的更新日志</value>
     </data>
     <data name="UpdateNotes" xml:space="preserve">
-        <value>本次更新包括：支持中文語言；MOD管理的巨大升级；从各方面进行大幅升级从而使游戏体验得到明显的改善，以及一些重要bug的修复。</value>
+        <value>这次更新增加了对没有4K纹理包DLC的玩家的支持，并修正了几个错误.</value>
     </data>
 </root>
