--- a/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.zh-hans.resx
+++ b/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.zh-hans.resx
@@ -27,4 +27,49 @@
     <data name="TextureFormat" xml:space="preserve">
         <value>纹理输出格式</value>
     </data>
+    <data name="Convert" xml:space="preserve">
+        <value>转换</value>
+    </data>
+    <data name="AdditionalConversionOptions" xml:space="preserve">
+        <value>转换含附加选项</value>
+    </data>
+    <data name="AdditionalOptions" xml:space="preserve">
+        <value>导出含附加选项</value>
+    </data>
+    <data name="ConvertFolder" xml:space="preserve">
+        <value>转换文件夹</value>
+    </data>
+    <data name="ConvertFormats" xml:space="preserve">
+        <value>格式转换</value>
+    </data>
+    <data name="ConvertRecursively" xml:space="preserve">
+        <value>也可以从子目录中递归式转换</value>
+    </data>
+    <data name="DeselectAll" xml:space="preserve">
+        <value>取消全选</value>
+    </data>
+    <data name="ExportFormats" xml:space="preserve">
+        <value>输出格式</value>
+    </data>
+    <data name="ExportRecursively" xml:space="preserve">
+        <value>也可以从子目录中递归式导出</value>
+    </data>
+    <data name="Models" xml:space="preserve">
+        <value>模型</value>
+    </data>
+    <data name="QuickPresets" xml:space="preserve">
+        <value>快速预设</value>
+    </data>
+    <data name="ScriptFormat" xml:space="preserve">
+        <value>脚本输出格式</value>
+    </data>
+    <data name="Scripts" xml:space="preserve">
+        <value>脚本</value>
+    </data>
+    <data name="SelectAll" xml:space="preserve">
+        <value>全选</value>
+    </data>
+    <data name="Textures" xml:space="preserve">
+        <value>纹理</value>
+    </data>
 </root>
