--- a/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.zh-hant.resx
+++ b/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.zh-hant.resx
@@ -27,4 +27,49 @@
     <data name="TextureFormat" xml:space="preserve">
         <value>紋理輸出格式</value>
     </data>
+    <data name="Convert" xml:space="preserve">
+        <value>轉換</value>
+    </data>
+    <data name="AdditionalConversionOptions" xml:space="preserve">
+        <value>轉換含附加選項</value>
+    </data>
+    <data name="AdditionalOptions" xml:space="preserve">
+        <value>匯出含附加選項</value>
+    </data>
+    <data name="ConvertFolder" xml:space="preserve">
+        <value>轉換資料夾</value>
+    </data>
+    <data name="ConvertFormats" xml:space="preserve">
+        <value>格式轉換</value>
+    </data>
+    <data name="ConvertRecursively" xml:space="preserve">
+        <value>也可以從子目錄中遞迴式轉換</value>
+    </data>
+    <data name="DeselectAll" xml:space="preserve">
+        <value>取消全選</value>
+    </data>
+    <data name="ExportFormats" xml:space="preserve">
+        <value>輸出格式</value>
+    </data>
+    <data name="ExportRecursively" xml:space="preserve">
+        <value>也可以從子目錄中遞迴式匯出</value>
+    </data>
+    <data name="Models" xml:space="preserve">
+        <value>模型</value>
+    </data>
+    <data name="QuickPresets" xml:space="preserve">
+        <value>快速預設</value>
+    </data>
+    <data name="ScriptFormat" xml:space="preserve">
+        <value>腳本輸出格式</value>
+    </data>
+    <data name="Scripts" xml:space="preserve">
+        <value>腳本</value>
+    </data>
+    <data name="SelectAll" xml:space="preserve">
+        <value>全選</value>
+    </data>
+    <data name="Textures" xml:space="preserve">
+        <value>紋理</value>
+    </data>
 </root>
