--- a/Flagrum.Web/Layout/PatchNotes.zh-hant.resx
+++ b/Flagrum.Web/Layout/PatchNotes.zh-hant.resx
@@ -25,6 +25,6 @@
         <value>查看完整的更新日誌</value>
     </data>
     <data name="UpdateNotes" xml:space="preserve">
-        <value>重制了資源管理器，加入更多提升遊戲體驗的功能並修復了已知BUG。</value>
+        <value>改進的穩定性和錯誤修復。</value>
     </data>
 </root>
